# greatfet

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  RELEASENOTES.md  ]  appveyor.yml  id_deploy.enc  requirements.txt
firmware/: CMakeLists.txt  README  README.md  config.h.in  dfu.py
firmware/blinky/: CMakeLists.txt  Cargo.toml  README  README.md  blinky.c  strip.py
firmware/blinky/src/: lib.rs
firmware/boards/azalea/: board.cmake  pins.h
firmware/boards/nxp_xplorer/: board.cmake  pins.h
firmware/boards/rad10_badge/: board.cmake
firmware/boards/rad1o_badge/: board.cmake  pins.h
firmware/cmake/: board_select.cmake  build_config.cmake  detect_version.cmake  dfu-util.cmake  greatfet-common.cmake  greatfet.cmake  greatfet_prelude.cmake  m0_bin.s.cmake  submodules.cmake  toolchain-arm-cortex-m.cmake
firmware/common/: CMakeLists.txt  LPC4330_M4_memory.ld  LPC4330_M4_memory_l0adable.ld  LPC43xx_M0_memory.ld  LPC43xx_M4_M0_image_from_text.ld  LPC43xx_M4_memory.ld  LPC43xx_l0adable.ld  README  adc.h  clocks.c  clocks.h  dac.h  debug.c  debug.h  eventrouter.h  fault_handler.c  fault_handler.h  gima.h  glitchkit.c  glitchkit.h  gpdma.c  gpdma.h  gpio.h  gpio_dma.c  gpio_dma.h  gpio_int.c  gpio_int.h  gpio_lpc.c  gpio_lpc.h  gpio_scu.c  gpio_scu.h  greatfet_core.c  greatfet_core.h  greatfet_pins.h  i2c.h  i2c_bus.c  i2c_bus.h  i2c_lpc.c  i2c_lpc.h  jtag.c  (+64 more)
firmware/common/tests/: Makefile  test_debug.cpp  test_runner.cpp
firmware/docs/: lpc43xx_usb_host.txt
firmware/flash_stub/: CMakeLists.txt  main.c
firmware/greatfet_usb/: CMakeLists.txt  Makefile  badge_firmware.h  cmake_install.cmake  glitchkit.c  glitchkit.h  greatfet_usb.c  pin_manager.c  pin_manager.h  rhododendron.h  sgpio_isr.c  sgpio_isr.h  test_m0.S  usb_api_1-Wire.c  usb_api_1-Wire.h  usb_api_DS18B20.c  usb_api_DS18B20.h  usb_api_adc.c  usb_api_adc.h  usb_api_board.c  usb_api_board.h  usb_api_board_info.c  usb_api_board_info.h  usb_api_dac.c  usb_api_dac.h  usb_api_debug.c  usb_api_debug.h  usb_api_glitchkit.c  usb_api_glitchkit.h  usb_api_glitchkit_simple.c  usb_api_glitchkit_simple.h  usb_api_glitchkit_usb.c  usb_api_glitchkit_usb.h  usb_api_gpio.c  usb_api_gpio.h  usb_api_greatdancer.c  usb_api_greatdancer.h  usb_api_heartbeat.c  usb_api_heartbeat.h  usb_api_i2c.c  (+34 more)
firmware/greatfet_usb/blinky/: Makefile  cmake_install.cmake  m0_bin.s
firmware/greatfet_usb/classes/: DS18B20.c  adc.c  beacon.h  clock_gen.c  core.c  dac.c  debug.c  example.c  firmware.c  freq_count.c  gpio.c  greatdancer.c  heartbeat.c  heartbeat.h  i2c.c  jtag.c  jtag_msp430.c  leds.c  loadables.c  logic_analyzer.c  logic_analyzer.h  operacake.c  operacake.h  pattern_generator.c  sdir.c  selftest.c  spi.c  spi_flash.c  swra124.c  uart.c  usb_analysis.c
firmware/greatfet_usb/flash_stub/: Makefile  cmake_install.cmake  m0_bin.s
firmware/greatfet_usb/greatfet_usb/: Makefile  cmake_install.cmake  m0_bin.s
firmware/greatfet_usb/legacy_apis/: usb_api_DS18B20.c  usb_api_DS18B20.h  usb_api_adc.c  usb_api_adc.h  usb_api_dac.c  usb_api_debug.h  usb_api_glitchkit.c  usb_api_glitchkit_simple.c  usb_api_glitchkit_simple.h  usb_api_glitchkit_usb.c  usb_api_gpio.h  usb_api_greatdancer.c  usb_api_i2c.c  usb_api_i2c.h  usb_api_leds.c  usb_api_logic_analyzer.c  usb_api_logic_analyzer.h  usb_api_msp430.c  usb_api_msp430.h  usb_api_sdir.c  usb_api_sdir.h  usb_api_spi.c  usb_api_spi.h  usb_api_usbhost.c  usb_api_usbhost.h
firmware/greatfet_usb/rhododendron/: capture.c  configuration.c  rhododendron_isr.S  rhododendron_m0.S
firmware/pll_fsk/: CMakeLists.txt  main.c
host/: .gitignore  MANIFEST.in  README  README.md  greatfet_adc  greatfet_firmware  greatfet_flame  greatfet_gpio_test  greatfet_info  greatfet_logic  greatfet_sdir  greatfet_spiflash  greatfet_test.py  pyproject.toml  setup.py
host/cmake/modules/: FindLIBGREATFET.cmake
host/greatfet/: __init__.py  board.py  errors.py  greatfet.py  interface.py  io_expander.py  neighbor.py  peripheral.py  peripherals.py  programmer.py  sensor.py  utils.py
host/greatfet-tools/: .gitignore  CMakeLists.txt
host/greatfet-tools/src/: CMakeLists.txt  greatfet_info.c  greatfet_transfer.c
host/greatfet/assets/: .gitignore  54-greatfet-plugdev.rules  54-greatfet-uaccess.rules  README
host/greatfet/boards/: __init__.py  azalea.py  flash_stub.py  legacy.py  one.py  rad1o.py  xplorer.py
host/greatfet/commands/: gf.py  greatfet.py  greatfet_1wire.py  greatfet_DS18B20.py  greatfet_adc.py  greatfet_adf7242.py  greatfet_chipcon.py  greatfet_dac.py  greatfet_dmesg.py  greatfet_firmware.py  greatfet_host_tools.py  greatfet_i2c.py  greatfet_info.py  greatfet_jtag.py  greatfet_led.py  greatfet_loadable.py  greatfet_logic.py  greatfet_msp430.py  greatfet_operacake.py  greatfet_pattern.py  greatfet_pirate.py  greatfet_rfhax.py  greatfet_sdir.py  greatfet_selftest.py  greatfet_shell.py  greatfet_spi.py  greatfet_spiflash.py  greatfet_swra124.py  greatfet_test.py  greatfet_uart.py  greatfet_usb_capture.py
host/greatfet/debug/: lpc43xx.py  svd.py
host/greatfet/examples/: gpio_pin_modes.py  greatfet_flame
host/greatfet/glitchkit/: __init__.py  base.py  simple.py  uart.py  usb.py
host/greatfet/gnuradio/: adc.block.yml  adc.py  block.py  block_greatfet_gpio.xml  blocks_gladiolus_source.xml  demos.py  gladiolus.py  gladiolus_source.block.yml  i2c.py  i2c_register_source.block.yml  i2c_source.block.yml
host/greatfet/interfaces/: adc.py  gpio.py  i2c_bus.py  i2c_device.py  jtag.py  led.py  pattern_generator.py  sdir.py  spi_bus.py  spi_device.py  uart.py
host/greatfet/io_expanders/: pca9674.py  pin.py  port.py
host/greatfet/neighbors/: __init__.py  foxglove.py
host/greatfet/peripherals/: adc.py  firmware.py  gpio.py  i2c_bus.py  i2c_device.py  jtag.py  jtag_msp430.py  led.py  m0.py  msp430_jtag.py  onboard_spi_flash.py  (+6 more)
host/libgreatfet/: 53-greatfet.rules  53-greatfet.rules.in  CMakeLists.txt  libgreatfet.pc.in  libhackrf.pc.in
host/misc/: 54-greatfet.rules
host/util/: 54-greatfet.rules
(+116 files in other folders)
