[build-system]
requires = ["setuptools>=41", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "greatfet"
dynamic = ["version"]
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"},
]
license = { text = "BSD" }
description = "Python library for hardware hacking with the GreatFET"
urls = { Source = "https://greatscottgadgets.com/greatfet" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]
dependencies = [
    "pyusb",
    "future",
    "pyfwup>=0.2",
    "tqdm",
    "cmsis_svd",
    "tabulate",
    "prompt_toolkit",
    "pygreat"
]

[project.scripts]
greatfet = "greatfet.commands.gf:main"
gf = "greatfet.commands.gf:main"
greatfet_adc = "greatfet.commands.greatfet_adc:main"
greatfet_dac = "greatfet.commands.greatfet_dac:main"
greatfet_adf7242 = "greatfet.commands.greatfet_adf7242:main"
greatfet_firmware = "greatfet.commands.greatfet_firmware:main"
greatfet_fw = "greatfet.commands.greatfet_firmware:main"
greatfet_info = "greatfet.commands.greatfet_info:main"
greatfet_led = "greatfet.commands.greatfet_led:main"
greatfet_logic = "greatfet.commands.greatfet_logic:main"
greatfet_sdir = "greatfet.commands.greatfet_sdir:main"
greatfet_spiflash = "greatfet.commands.greatfet_spiflash:main"
greatfet_spi-flash = "greatfet.commands.greatfet_spiflash:main"
greatfet_DS18B20 = "greatfet.commands.greatfet_DS18B20:main"
greatfet_i2c = "greatfet.commands.greatfet_i2c:main"
greatfet_shell = "greatfet.commands.greatfet_shell:main"
greatfet_dmesg = "greatfet.commands.greatfet_dmesg:main"
greatfet_msp430 = "greatfet.commands.greatfet_msp430:main"
greatfet_host-tools = "greatfet.commands.greatfet_host_tools:main"
greatfet_pattern = "greatfet.commands.greatfet_pattern:main"
greatfet_loadable = "greatfet.commands.greatfet_loadable:main"
greatfet_usb-capture = "greatfet.commands.greatfet_usb_capture:main"
greatfet_uart = "greatfet.commands.greatfet_uart:main"
greatfet_pirate = "greatfet.commands.greatfet_pirate:main"
greatfet_jtag = "greatfet.commands.greatfet_jtag:main"
greatfet_chipcon = "greatfet.commands.greatfet_chipcon:main"

[tool.setuptools-git-versioning]
enabled = true
starting_version = "2019.05.01"
